# cFileEncrypt

./: .gitignore  CMakeLists.txt  README.md  build_win_mingw.bat  factory.c  factory.h  main.c  mycstring.c  mycstring.h  share.c  share.h  toolchain-mingw64.cmake
encrypt/: exchange_byte.c  exchange_byte.h  math_calc.c  math_calc.h  xor.c  xor.h
files/: fileio.c  fileio.h  win.c  win.h
